# fluxopt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  renovate.json  versions.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  tests.yaml
0.0.1rc0/guide/converters/: index.html
0.0.1rc0/guide/effects/: index.html
0.0.1rc0/guide/status/: index.html
0.0.1rc0/math/converters/: index.html
0.0.1rc0/math/effects/: index.html
0.0.1rc0/math/flows/: index.html
0.0.1rc0/math/objective/: index.html
0.0.1rc0/math/status/: index.html
0.0.1rc0/math/storage/: index.html
0.0.1rc0/notebooks/01-quickstart/: index.html
0.0.1rc0/notebooks/02-heat-system/: 02-heat-system.ipynb  index.html
0.0.1rc0/search/: search_index.json
dev/: 404.html  index.html
dev/guide/converters/: index.html
dev/guide/effects/: index.html
dev/guide/flows/: index.html
dev/guide/getting-started/: index.html
dev/guide/sizing/: index.html
dev/guide/storage/: index.html
dev/math/bus-balance/: index.html
dev/math/converters/: index.html
dev/math/effects/: index.html
dev/math/flows/: index.html
dev/math/notation/: index.html
dev/math/objective/: index.html
dev/math/sizing/: index.html
dev/math/storage/: index.html
dev/notebooks/01-quickstart/: index.html
dev/search/: search_index.json
docs/: index.md
docs/guide/: converters.md  effects.md  flows.md  getting-started.md  sizing.md  status.md  storage.md  yaml-loader.md
docs/math/: bus-balance.md  converters.md  effects.md  flow-bounds.md  flows.md  notation.md  objective.md  sizing.md  status.md  storage.md
docs/notebooks/: 01-quickstart.ipynb  02-heat-system.ipynb
docs/stylesheets/: extra.css
scripts/: benchmark_build.py  explore_pyoframe_dims.py  plotly_demo.py
src/energysys/: __init__.py  components.py  data.py  elements.py  model.py  results.py  types.py  validation.py
src/fluxopt/: __init__.py  components.py  constraints.py  constraints2.py  contributions.py  data.py  elements.py  io.py  model.py  model_data.py  results.py  tables.py  types.py  validation.py  yaml_loader.py
tests/: conftest.py  test_constraints.py  test_data.py  test_io.py  test_sizing.py  test_types.py  test_yaml_loader.py
tests/energysys/: test_bus_balance.py  test_converter.py  test_data.py  test_effects.py  test_end_to_end.py  test_storage.py  test_types.py
tests/fluxopt/: conftest.py  test_bus_balance.py  test_converter.py  test_data.py  test_effects.py  test_end_to_end.py  test_storage.py  test_types.py
tests/math/: test_bus_balance.py  test_bus_penalty.py  test_contributions.py  test_converter.py  test_custom.py  test_effects.py  test_end_to_end.py  test_math.py  test_sizing.py  test_status.py  test_storage.py
tests/math_port/: conftest.py  test_bus.py  test_clustering.py  test_combinations.py  test_components.py  test_conversion.py  test_effects.py  test_flow.py  test_flow_invest.py  test_flow_status.py  test_legacy_solution_access.py  test_multi_period.py  test_piecewise.py  test_scenarios.py  test_storage.py  test_validation.py
(+6 files in other folders)
