[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fluxopt"
dynamic = ["version"]
description = "Energy system optimization with pyoframe — progressive modeling, from simple to complex."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Felix Bumann", email = "felixbumann387@gmail.com" },
]
maintainers = [
    { name = "Felix Bumann", email = "felixbumann387@gmail.com" },
]
keywords = ["optimization", "energy systems", "pyoframe", "linear programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "highspy>=1.13.1",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyoframe>=1.0.0",
]

[project.optional-dependencies]
network_viz = [
    "dash>=3.0,<4",
    "dash-cytoscape>=1.0,<2",
    "dash-daq>=0.6,<1",
    "networkx>=3.0,<4",
    "werkzeug>=3.0,<4",
    "flask>=3.0,<4",
]
full = [
    "fluxopt[network_viz]",
    "tsam>=2.3,<4",
    "pyvis==0.3.2",
    "scipy>=1.15,<2",
    "gurobipy>=10.0,<14; python_version<'3.14'",
]

[project.urls]
repository = "https://github.com/FBumann/fluxopt"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/energysys"]

[tool.hatch.build.targets.sdist]
include = ["src/energysys/", "LICENSE", "README.md"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
docs = [
    "markdown-include>=0.8.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-plotly-plugin>=0.1.3",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings-python>=2.0.2",
    "notebook>=7.5.3",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.20.1",
]

[tool.ruff]
target-version = "py312"
exclude = [
    "venv",
    "build",
    "dist",
    "__pycache__",
    ".git",
    ".mypy_cache",
]
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "FA",    # flake8-future-annotations
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",
]
extend-fixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
]
